# psp-cfw-sdk

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflow/: build.yaml
.github/workflows/: build.yaml
build-tools/: CMakeLists.txt  CreateStubLib.cmake  build_ipl.mak
build-tools/gz/: pspungz.py
build-tools/pack/: pack.py  pkg-res.py
include/: ark.h  arkmenu.h  bootloadex.h  bootloadex_ark.h  cfwmacros.h  ciso.h  idstorage_ms.h  infernoctrl.h  isoctrl.h  kubridge.h  libpsardumper.h  libpspexploit.h  mini2d.h  pspbtcnf.h  pspelf.h  pspextratypes.h  pspunarchive.h  pspusbdevice.h  rebootexconfig.h  screenprinter.h  systemctrl.h  systemctrl_adrenaline.h  systemctrl_ark.h  systemctrl_private.h  systemctrl_se.h  vshctrl.h
samples/: guglue.exp
src/: CMakeLists.txt
src/AdrenalineCtrl/: AdrenalineControl.S  CMakeLists.txt  Makefile
src/ArkCtrl/: ArkControl.S  CMakeLists.txt  Makefile
src/BootLoadEx/: CMakeLists.txt  Makefile  README.md  bootloadex.c  bootloadex.h  bootloadex_ark.c  bootloadex_ark.h  crt0.S  patches_psp.c  patches_psp_ark.c  patches_vita.c  patches_vita_epsp.c  patches_vita_epsx.c  patches_vita_vpsp.c  pspbtcnf.c  scanner.c
src/DcManager/: CMakeLists.txt  DcManager.S  Makefile
src/KUBridge/: CMakeLists.txt  Makefile
src/LibCisoRead/: CMakeLists.txt  Makefile  ciso.h  cisoreader.c
src/LibPspExploit/: CMakeLists.txt  Makefile  README.md  kernel_reader.c  kernel_writer.c  kreader_netmcopyback.c  kreader_rtc.c  kreader_rtccomparetick.c  kwriter_fakeuid.c  kwriter_sd.c  kwriter_sdgetlastindex.c  kxploit.c  libpspexploit.c  libpspexploit.h  netlib.S
src/LibPspExploit/kreader/: netmcopyback.c  npcore.c
src/LibPspExploit/kwriter/: fakeuid.c  netmpulldown.c  regremovecat.c
src/LibPspExploit/stubs/: netlib.S  npcore.S  p5_stubs.c  registry.S
src/ScePaf/: CMakeLists.txt  Makefile  ScePaf.S
src/ScePafLibc/: CMakeLists.txt  Makefile  ScePafLibc.S
src/SysclibForUser/: CMakeLists.txt  Makefile  SysclibForUser.S
src/SystemCtrlForKernel/: CMakeLists.txt  Makefile  SystemCtrlForKernel.S
src/SystemCtrlForUser/: CMakeLists.txt  Makefile  SystemCtrlForUser.S
src/VshCtrl/: CMakeLists.txt  Makefile  VshCtrl.S
src/ansi-c/: CMakeLists.txt  Makefile  memalign.c  memcmp.c  memcpy.c  memfindsz.c  memfindu32.c  memmove.c  memset.c  printf.c  rand.c  setlongjmp.S  sprintf.c  stpcpy.c  strbeginswith.c  strcasecmp.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strcspn.c  strdup.c  strhex32.c  strhex64.c  stristr.c  strlen.c  strncat.c  strncat_s.c  strncmp.c  strncpy.c  strncpy_s.c  strndup.c  strnlen.c  strrchr.c  strreplaceall.c  strspn.c  strstr.c  strtok.c  strtrim.c  tolower.c
src/colordebugger/: CMakeLists.txt  Makefile  colordebugger.c
src/guglue/: CMakeLists.txt  Makefile  libguglue.S
src/idsRegeneration/: CMakeLists.txt  Makefile  idsRegeneration.S
src/idsRegeneration_driver/: CMakeLists.txt  Makefile  idsRegeneration_driver.S
src/idstorage_ms/: CMakeLists.txt  Makefile  idstorage_ms.c
src/inferno_driver/: CMakeLists.txt  Makefile  inferno_driver.S
src/iplsdk/: CMakeLists.txt  LICENSE  Makefile
src/iplsdk/include/: fat.h  mspro.h  syscon.h  sysreg.h
src/iplsdk/src/: fat.c  kirk.c  mspro.c  syscon.c  sysreg.c
src/isoCtrl_driver/: CMakeLists.txt  Makefile  isoCtrl_driver.S
src/kpspident/: CMakeLists.txt  Makefile  libkpspident.S
src/libintraFont_stub/: CMakeLists.txt  Makefile
src/libpng_stub/: CMakeLists.txt  Makefile  libpng.S
src/libpspav_stub/: CMakeLists.txt  Makefile
src/libpspftp_stub/: CMakeLists.txt  Makefile
src/libunarchive_helper/: Makefile  unarchive.c
src/microlz/: CMakeLists.txt  Makefile
src/mini2d/: CMakeLists.txt  Makefile  graphics.c
src/popsdisplay/: Makefile  popsdisplay.c  popsdisplay.h
src/pre-built/: CMakeLists.txt
src/pspDecrypt/: CMakeLists.txt  Makefile  libpspDecrypt.S
src/pspIplUpdate/: CMakeLists.txt  Makefile  libpspIplUpdate.S
src/pspKbootiUpdate/: CMakeLists.txt  Makefile  libpspKbootiUpdate.S
src/pspPSAR/: CMakeLists.txt  Makefile  libpspPSAR.S
src/pspmalloc/: Makefile  malloc.c
src/pspminicrt/: Makefile  crt0.c
src/screenprinter/: CMakeLists.txt  Makefile  lib.c  screenprinter.c
src/tinyfont/: CMakeLists.txt  Makefile  tinyfont.c  tinyfont.h
tests/: test_invariant_unarchive.c
