cmake_minimum_required(VERSION 3.16)

include(../build-tools/CreateStubLib.cmake)

add_subdirectory(KUBridge)
add_subdirectory(SystemCtrlForUser)
add_subdirectory(SystemCtrlForKernel)
add_subdirectory(VshCtrl)
add_subdirectory(SysclibForUser)
add_subdirectory(idsRegeneration)
add_subdirectory(idsRegeneration_driver)
add_subdirectory(libintraFont_stub)
add_subdirectory(libpspav_stub)
add_subdirectory(libpspftp_stub)
add_subdirectory(guglue)
add_subdirectory(ansi-c)
add_subdirectory(colordebugger)
add_subdirectory(screenprinter)
add_subdirectory(mini2d)
add_subdirectory(iplsdk)
